--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     type="text/css"
     />    
     <script src="js/map.js"></script>  
-    <script src="Js/store.js"></script>    
+    <script src="js/store.js"></script>    
     <script src="js/restaurant.js"></script>
 </body>
 </html>
